trunk/Archive2/a9/4a6219a547fabd/output
main.cpp: In function ‘int main()’:
main.cpp:38:7: error: no match for ‘operator>>’ (operand types are ‘long unsigned int’ and ‘std::fstream {aka std::basic_fstream<char>}’)
     k >> f;
       ^
main.cpp:38:7: note: candidates are:
main.cpp:26:15: note: std::fstream& operator>>(std::fstream&, long unsigned int&)
 std::fstream& operator >>(std::fstream& rwf, unsigned long& OID)
               ^
main.cpp:26:15: note:   no known conversion for argument 1 from ‘long unsigned int’ to ‘std::fstream& {aka std::basic_fstream<char>&}’
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:872:5: note: template<class _CharT, class _Traits, class _Tp> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&)
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
/usr/include/c++/4.8/istream:872:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<_CharT, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:779:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^
/usr/include/c++/4.8/istream:779:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<char, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:774:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^
/usr/include/c++/4.8/istream:774:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<char, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:732:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^
/usr/include/c++/4.8/istream:732:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<char, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:727:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^
/usr/include/c++/4.8/istream:727:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<char, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/istream:879:0,
                 from /usr/include/c++/4.8/iostream:40,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/istream.tcc:923:5: note: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^
/usr/include/c++/4.8/bits/istream.tcc:923:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<_CharT, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/istream:879:0,
                 from /usr/include/c++/4.8/iostream:40,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/istream.tcc:955:5: note: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^
/usr/include/c++/4.8/bits/istream.tcc:955:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<_CharT, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
In file included from /usr/include/c++/4.8/string:53:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/basic_string.tcc:996:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/include/c++/4.8/bits/basic_string.tcc:996:5: note:   template argument deduction/substitution failed:
main.cpp:38:10: note:   mismatched types ‘std::basic_istream<_CharT, _Traits>’ and ‘long unsigned int’
     k >> f;
          ^
main.cpp:39:10: error: ‘i’ was not declared in this scope
     k << i << std::endl;
          ^
